Env : 1. Perbaikan env untuk sub directory per module 2. Pembuatan env location